--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
 	"name": "@ctx-core/combinators",
 	"version": "4.2.17",
 	"description": "ctx-core combinators",
-	"main": "lib.js",
-	"module": "lib.js",
-	"types": "lib.ts",
+	"main": "index.js",
+	"module": "index.js",
+	"types": "index.ts",
 	"scripts": {
 		"build": "npm run clean && npm run compile",
 		"clean": "rm -f tsconfig.tsbuildinfo",
