--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"clean": "rm -f tsconfig.tsbuildinfo",
 		"compile": "tsc -b",
 		"prepublishOnly": "npm run compile",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"exec": "$@"
 	},
 	"repository": {
 		"type": "git",
@@ -29,5 +29,5 @@
 	"publishConfig": {
 		"access": "public"
 	},
-	"gitHead": "2435eae919e340d738b7fe3b62a6f88712683f2a"
+	"gitHead": "bca8de733cf34a7836aaf4944c6a09817edc1052"
 }
