--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ctx-core/combinators",
-  "version": "5.0.0",
+  "version": "5.0.1",
   "description": "ctx-core combinators",
   "keywords": [
     "ctx-core",
@@ -25,6 +25,9 @@
     "compile": "./node_modules/.bin/tsc -b",
     "exec": "$@",
     "prepublishOnly": "npm run compile"
+  },
+  "devDependencies": {
+    "typescript": "^4.0.3"
   },
   "publishConfig": {
     "access": "public"
