--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/combinators",
-	"version": "8.0.36",
+	"version": "8.0.37",
 	"description": "ctx-core combinators",
 	"keywords": [
 		"ctx-core",
@@ -46,5 +46,6 @@
 	"publishConfig": {
 		"access": "public",
 		"cache": "~/.npm"
-	}
+	},
+	"sideEffects": false
 }
